# Auth

./: .dockerignore  .env.sample  .gitignore  CHANGELOG.md  Dockerfile  Dockerfile.auth  Dockerfile.kafka1  Dockerfile.kafka2  FOLDER_STRUCTURE.md  README.md  app.py  celery_app.py  docker-compose.yml  fixed-kafka-consumer.py  fixed-kafka1-config.py  fixed-kafka2-config.py  main.py  openapi.yaml  pyproject.toml  pytest.ini  requirements.txt  run.sh  waitforkafka.sh
authentication/: api_hit.py  auth.py  auth_doctor.py  auth_patient.py  auth_token.py  celery_app.py  database.py  doctor_hit_api.py  fake_doctor.py  fake_patient.py  fake_user.py  google_auth.py  hashing.py  main.py  models.py  oauth2.py  otp_verify.py  redis.py  schemas.py  send_mail.py  test.py  token.py  try.py  utils.py
authentication/config/: bloom_filter.py  celery_app.py  database.py  kafka1_config.py  kafka2_config.py  kafka3_config.py  kafka_consumer.py  redis_config.py  security.py
authentication/helper/: auth_token.py  deterministic_hash.py  hashing.py  oauth2.py  utils.py
authentication/models/: models.py
authentication/otp_service/: otp_verify.py  send_mail.py
authentication/routes/: google_auth.py  user_auth.py
authentication/src/: auth_doctor.py  auth_manager.py  auth_patient.py  auth_user.py  (+4 more)
test_api/: README.md  __init__.py  conftest.py  doctor_hit_api.py  locust.py  locustfile.py  run_tests.py  stress_test.py  test.py  test_auth_endpoints.py  test_helpers.py  test_integration.py  test_login.py  test_models.py  test_requirements.txt  test_security.py  try.py  user_api_hit.py
(+27 files in other folders)
