[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aioredis==2.0.1",
    "argon2-cffi>=25.1.0",
    "authlib>=1.7.2",
    "blinker>=1.9.0",
    "boto3>=1.43.14",
    "celery>=5.6.3",
    "concurrent-log-handler>=0.9.29",
    "contourpy>=1.3.3",
    "cryptography>=48.0.0",
    "email-validator>=2.3.0",
    "faker>=40.19.1",
    "fastapi[standard]>=0.136.1",
    "fernet>=1.0.1",
    "getenv>=0.2.0",
    "google-api-core>=2.30.3",
    "google-api-python-client>=2.196.0",
    "google-auth>=2.53.0",
    "google-auth-oauthlib>=1.4.0",
    "googleapis-common-protos>=1.75.0",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "jwt>=1.4.0",
    "kafka-python>=2.3.1",
    "locust>=2.44.0",
    "mmh3>=5.2.1",
    "motor>=3.7.1",
    "multidict>=6.7.1",
    "phonenumbers>=9.0.31",
    "psutil>=7.2.2",
    "pycountry>=26.2.16",
    "pydantic>=2.13.4",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "python-multipart>=0.0.29",
    "redis>=7.4.0",
    "requests>=2.34.2",
    "requests-oauthlib>=2.0.0",
    "rich>=15.0.0",
    "scalar-fastapi>=1.8.2",
    "slowapi>=0.1.9",
    "starlette>=1.0.1",
    "twilio>=9.10.9",
    "uvicorn>=0.47.0",
    "watchfiles>=1.2.0",
]
